# libpam-policycache

./: .gitignore  CONTRIBUTING.md  Makefile.am  NOTICES  README.md  autogen.sh  configure.ac
debian/: changelog  control  copyright  docs  libpam-policycache.dirs  libpam-policycache.install  libpam-policycache.lintian-overrides  libpam-policycache.postinst  rules
src/: Makefile.am  entry.c  entry.h  entry_test.c  escalate_helper.c  escalate_helper.h  escalate_helper_test.c  escalate_message.c  escalate_message.h  escalate_message_test.c  escalate_module.c  escalate_module.h  escalate_module_test.c  escalate_subprocess.c  escalate_subprocess.h  escalate_subprocess_test.c  escalate_test.c  escalate_test.h  escalate_util.c  escalate_util.h  import-shadow-hash.c  import.c  import.h  import_test.c  module.c  module.h  module_test.c  pam_test_tool.c  policy.c  policy.h  policy_test.c  storage.c  storage.h  storage_test.c  test.c  test.h  util.c  util.h  util_test.c
testdata/: Makefile.am  policy1.conf  policy2.conf  shadow
